# RPL4

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  build.sh
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: DMA_PWM.md
example/: CMakeLists.txt  aux_spi_example.cpp  dma_example.cpp  dma_types_example.cpp  gpio_example.cpp  pwm_dma_example.cpp  pwm_example.cpp  spi_example.cpp  spi_example2.cpp  spi_quad_bus_example.cpp  standard_example.cpp
include/drivers/: GPIO.hpp  PWM.hpp
include/rpl4/: rpl4.hpp
include/rpl4/peripheral/: GPIO.hpp  PWM.hpp  aux_spi.hpp  dma.hpp  dma4.hpp  dma_base.hpp  dma_lite.hpp  dma_standard.hpp  gpio.hpp  pwm.hpp  spi.hpp  spi_base.hpp
include/rpl4/registers/: registers.hpp  registers_aux.hpp  registers_aux_spi.hpp  registers_bsc.hpp  registers_clock.hpp  registers_dma.hpp  registers_gpio.hpp  registers_pwm.hpp  registers_spi.hpp  registers_uart.hpp
include/rpl4/system/: clock.hpp  dma_memory.hpp  log.hpp  system.hpp
include/system/: rpl4_clock.hpp  rpl4_message.hpp  rpl4_system.hpp
include/system/registers/: rpl4_registers.hpp  rpl4_registers_aux.hpp  rpl4_registers_bsc.hpp  rpl4_registers_clock.hpp  rpl4_registers_dma.hpp  rpl4_registers_gpio.hpp  rpl4_registers_pwm.hpp
src/drivers/: GPIO.cpp  PWM.cpp
src/peripheral/: GPIO.cpp  PWM.cpp  aux_spi.cpp  dma.cpp  dma4.cpp  dma_lite.cpp  dma_standard.cpp  gpio.cpp  pwm.cpp  spi.cpp
src/system/: clock.cpp  dma_memory.cpp  log.cpp  rpl4_clock.cpp  rpl4_message.cpp  rpl4_system.cpp  system.cpp
util/: build.sh  cpplint.sh  generate_register_init_code.py
